Fix select box width on narrow screens

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -9,6 +9,9 @@ form {
         margin-right: 0.5em;
       }
     }
+    select {
+      max-width: 90%;
+    }
   }
   label {
     display: block;
